01/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: bit.homework
      http:
        paths:
          - path: /bitapp/bruhanov/(.*)
            backend:
              serviceName: nginx-service
              servicePort: 8000
